updating code on 10-13

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -29,14 +29,15 @@
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </nav>
     <div>
-    <setion id="IOD">  
+    <setion class="IOD">  
   <h1>Innovation
-        On
+    <div id="on">On</div>
        Demand
   </h1>
       
 
-  Get Started
+  <button>Get Started</button>
+      
       </div>
     <div class="img2">
   <img src="img/header-img.png" alt="Image of a code snippet.">
